# pson

./: pyproject.toml
src/: pson.py
