[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pythson"
version = "0.0.1"
authors = [{name = "Oskari Lappalainen"}
]
description = "Minimalist way to handle JSON."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3"
]

[project.urls]
"Homepage" = "https://github.com/shadowlegend551/pythson"
